feat: better logs